[gd_scene load_steps=7 format=3 uid="uid://ppju36j0mg2e"]

[ext_resource type="Script" uid="uid://w4k0jycev00v" path="res://objects/ui/options/options.gd" id="1_37fjm"]
[ext_resource type="PackedScene" uid="uid://dcn8n5n61xylg" path="res://objects/vfx/background.tscn" id="2_2t8hb"]
[ext_resource type="FontFile" uid="uid://gfyoxvkyk86o" path="res://style/merienda.woff2" id="3_si2cc"]

[sub_resource type="LabelSettings" id="LabelSettings_pgwx2"]
font = ExtResource("3_si2cc")
font_size = 111

[sub_resource type="LabelSettings" id="LabelSettings_8i3oi"]
font_size = 46

[sub_resource type="LabelSettings" id="LabelSettings_2vtp0"]
font_size = 41

[node name="Options" type="Node2D"]
script = ExtResource("1_37fjm")

[node name="Background" parent="." instance=ExtResource("2_2t8hb")]
position = Vector2(960, 540)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Options"
label_settings = SubResource("LabelSettings_pgwx2")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Music" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Music"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Music volume"
label_settings = SubResource("LabelSettings_8i3oi")

[node name="MusicValue" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/Music"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "100%"
label_settings = SubResource("LabelSettings_2vtp0")

[node name="MusicMinus" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/Music"]
layout_mode = 2
focus_mode = 0
text = "-5%"

[node name="MusicPlus" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/Music"]
layout_mode = 2
focus_mode = 0
text = "+5%"

[node name="SFX" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 35

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Sound volume"
label_settings = SubResource("LabelSettings_8i3oi")

[node name="SFXValue" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "100%"
label_settings = SubResource("LabelSettings_2vtp0")

[node name="SFXMinus" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX"]
layout_mode = 2
focus_mode = 0
text = "-5%"

[node name="SFXPlus" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/SFX"]
layout_mode = 2
focus_mode = 0
text = "+5%"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Save & close"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Music/MusicMinus" to="." method="_on_music_minus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Music/MusicPlus" to="." method="_on_music_plus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/SFX/SFXMinus" to="." method="_on_sfx_minus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/SFX/SFXPlus" to="." method="_on_sfx_plus_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
